    - Added new API functions
      TownyUniverse.getTownBlock(location)
      TownyUniverse.getCachePermission(player,location,action)
    - Towny will now check the Craftbukkit version and disable itself if it's too old.
v0.76.1.1:
    - Fixed economy errors when using register and iCo6.
    - Fixed an error caused by players setting a town or nation bank cap as a double (now accepts 0.0).
v0.76.1.2:
    - Added sanity checking on values pulled from the config.yml.
    - Updated a few nation commands to report the command format insted of throwing errors.
v0.76.1.3:
    - Tidied Startup log data
    - Fixed Wild permissions.
v0.76.1.4:
    - Refactored '/town spawn' with new config options for when the target town is part of your nation,
      or an allied nation. Each can have their own cost and has their own permission.
    - Town spawn permissions have been changed to:
    
      - towny.town.spawn.* : Grants all Spawn travel nodes
      - towny.town.spawn.town : Ability to spawn to your own town.
      - towny.town.spawn.nation : Ability to spawn to other towns in your nation.
      - towny.town.spawn.ally : Ability to spawn to towns in nations allied with yours.
      - towny.town.spawn.public : Ability to spawn to unaffilated public towns.
v0.76.1.5:
    - Added missing permission nodes to support...
      - towny.wild.*
v0.76.1.6:
    - Fixed a bug preventing players placing fences if they are admins.
v0.76.1.7:
	- Adjusted wilderness permissions
	  Towny will first check for permisison nodes.
	  If no permissions are found the wild_ignore list is checked.
	  If none of the above give permissions the worlds Wilderness zone settings are checked.
	- Enabled use of the following commands for admins while still using permissions.
	  '/townyworld set usedefault'
	  '/townyworld set wildperm'
	  '/townyworld set wildperm [build,destroy,switch,ItemUse]'
	  '/townyworld set wildignore xx,xx,xx'
	  '/townyworld set wildname Wildy'